# transformers-turboquant

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  next_thing.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fast-tests.yml  publish.yml
docs/superpowers/plans/: 2026-03-27-triton-kernels.md  2026-03-29-transformers-turboquant.md
docs/superpowers/specs/: 2026-03-27-triton-kernels-design.md  2026-03-29-transformers-turboquant-design.md
src/transformers_turboquant/: __init__.py  base.py  cli.py  patch.py  registry.py
src/transformers_turboquant/families/: __init__.py  deepseek.py  gpt2.py  llama.py  qwen2.py
src/turboquant_pytorch/: compressors.py  lloyd_max.py  validate.py
src/turboquant_pytorch/kernels/: __init__.py  attention.py  bit_ops.py  quantize.py
tests/: test_apply_turboquant.py  test_cli.py  test_compressors.py  test_kernels.py  test_memory.py  test_pipeline.py  test_registry.py  test_sft.py  test_slow.py  test_slow_models.py  test_turboquant.py
